--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     alias(libs.plugins.android.application)
     alias(libs.plugins.jetbrains.kotlin.android)
-    id 'androidx.navigation.safeargs'
-    id 'kotlin-parcelize'
+    id 'androidx.navigation.safeargs.kotlin'
+    alias(libs.plugins.kotlin.parcelize)
 }
 
 android {
