--- a/build.gradle
+++ b/build.gradle
@@ -8,10 +8,9 @@ buildscript {
 }
 
 plugins {
-    id "org.jetbrains.kotlin.plugin.parcelize" version "2.0.20-RC"
     alias(libs.plugins.android.application) apply false
     alias(libs.plugins.jetbrains.kotlin.android) apply false
     alias(libs.plugins.android.library) apply false
     alias(libs.plugins.jetbrains.kotlin.jvm) apply false
-
+    alias(libs.plugins.kotlin.parcelize) apply false
 }
